# 114S-535655-IMVFX-Final

./: .gitignore  README.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  start.sh
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/images/[sessionId]/[filename]/: route.ts
frontend/src/app/api/pipeline-pal4vst/: route.ts
frontend/src/app/api/pipeline-qwen/start/: route.ts
frontend/src/app/api/pipeline/abort/: route.ts
frontend/src/app/api/pipeline/start/: route.ts
frontend/src/app/api/test/invoke/: route.ts
frontend/src/app/api/test/status/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/api/upload/mask/: route.ts
frontend/src/app/pipeline/: page.tsx
frontend/src/app/pipeline-pal4vst/: page.tsx
frontend/src/app/pipeline-qwen/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/test/artifact-detector/: page.tsx
frontend/src/app/test/fakevlm/: page.tsx
frontend/src/app/test/grounded-sam/: page.tsx
frontend/src/app/test/inpainting/: page.tsx
frontend/src/app/test/instructpix2pix/: page.tsx
frontend/src/app/test/pal4vst/: page.tsx
frontend/src/app/test/qwen25vl/: page.tsx
frontend/src/app/test/sd2/: page.tsx
frontend/src/components/: Dropzone.tsx  MaskCanvas.tsx  PipelineStatus.tsx  PromptPanel.tsx  ResultPanel.tsx  TestShell.tsx
frontend/src/lib/: paths.ts  pipelineState.ts  serviceClient.ts  types.ts
scripts/: start_services.sh  stop_services.sh
services/PAL4VST/: main.py  pyproject.toml  server.py  start.sh
services/artifact_detector/: pyproject.toml  server.py  start.sh
services/fakeVLM/: README.md  pyproject.toml  requirement.txt  server.py  start.sh  testVLM.py
services/grounded_sam/: pyproject.toml  server.py  setup.py  start.sh
services/inpainting/: pyproject.toml  server.py  start.sh
services/instructpix2pix/: pyproject.toml  server.py  start.sh
services/qwen25vl/: pyproject.toml  server.py
services/sd2/: pyproject.toml  server.py
services/shared/: device.py
