[project]
name = "artifact-detector-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "transformers>=4.40",
    "accelerate>=0.29",
    "torch>=2.2",
    "torchvision>=0.17",
    "pillow>=10.0",
    "qwen-vl-utils>=0.0.8",
]
