[project]
name = "grounded-sam-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "torch>=2.2",
    "torchvision>=0.17",
    # GroundingDINO (transformers 4.44+) + SAM 1 — pure Python, no C++ compilation
    "transformers>=4.44,<4.48",
    "pillow>=10.0",
    "numpy>=1.26",
]

# On Linux/Windows: install CUDA 12.1 wheels from pytorch.org
# On macOS: fall back to PyPI (includes MPS support)
# Change cu121 → cu118 / cu124 to match your installed CUDA version.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
